@@ -10,35 +10,41 @@ import jakarta.ws.rs.QueryParam;
 import nl.belastingdienst.rest.domain.Beer;
 import nl.belastingdienst.rest.domain.BeerInput;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static jakarta.ws.rs.core.MediaType.APPLICATION_JSON;
-import static java.util.UUID.randomUUID;
 
 @Path("beers")
 @Produces(APPLICATION_JSON)
 @Consumes(APPLICATION_JSON)
 public class BeersResource {
 
-    List<Beer> beers = List.of(new Beer("Leffe"), new Beer("Grolsch"));
+    List<Beer> beers = new ArrayList<>(Arrays.asList(
+            new Beer("Leffe", "Blond", 1.89),
+            new Beer("Leffe", "Tripel", 1.89),
+            new Beer("Grolsch", "Pils", 0.89),
+            new Beer("LaTrappe", "Dubbel", 2)
+    ));
 
-    @GET  // beers?q=leffe
+    @GET  // ../beers?q=leffe
     public List<Beer> search(@QueryParam("q") String q) {
         return q != null ?
                 this.beers.stream()
-                        .filter(s -> s.name().contains(q))
+                        .filter(s -> s.make().contains(q))
                         .toList() :
                 this.beers;
     }
 
-    @GET @Path("{id}") // beers/<een-id>
+    @GET @Path("{id}") // ../beers/<een-id>
     public Beer get(@PathParam("id") String id) {
         return this.beers.get(Integer.parseInt(id));
     }
 
-    @POST
+    @POST // ../beers
     public Beer add(BeerInput input) {
-        Beer newBeer = new Beer(randomUUID().toString(), input.name());
+        Beer newBeer = new Beer(input.make(), input.type(), input.price());
         this.beers.add(newBeer);
         return newBeer;
     }
